--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../puhelinluettelo && npm run build && cp -r build ../../../Osa3",
+    "build:ui": "rm -rf build && cd ../puhelinluettelo && npm run build && cp -r build ../osa3_backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Suvi Salo",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
